--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-read-more-read-less": "^1.0.7",
     "react-router-dom": "^7.7.0",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11",
