--- a/package.json
+++ b/package.json
@@ -11,21 +11,33 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.5",
+    "@heroicons/react": "^2.2.0",
     "@react-google-maps/api": "^2.20.7",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
+    "chart.js": "^4.5.0",
+    "date-fns": "^4.1.0",
+    "express-rate-limit": "^8.0.1",
     "framer-motion": "^12.23.7",
+    "helmet": "^8.1.0",
+    "jspdf": "^3.0.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
+    "papaparse": "^5.5.3",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-read-more-read-less": "^1.0.7",
-    "react-router-dom": "^7.7.0",
+    "react-router-dom": "^7.7.1",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
+    "recharts": "^3.1.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11",
+    "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
